Wed Jul 25 03:45:51 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

	* boot.pl.in (xst_boot_conf_edit_image): Removed append
	key special case for quoting. Quote values only if they
	contain spaces and are not already quoted.
	(xst_boot_conf_add_image): same.

	* replace.pl.in (xst_replace_from_table): If interpolation
	failed, go to next feature. Failed interpolations return
	arguments that make no sense.
	(xst_replace_kw): Wasn't getting $value arg (!). This affected
	Debian ppp option replacing and possibly other places.

	* parse.pl.in (xst_parse_replace_hash_values): Return 1/0
	if interpolation succeeded.
	(xst_parse_from_table): If interpolation failed, go to next
	feature.

	* network.pl.in (xst_network_get_parse_table): Removed
	domainname tag support.
	(xst_network_get_replace_table): same.

	* network-conf.in (xml_parse_network): Removed domainname
	tag support.
	(xml_print): same.

	* replace.pl.in (xst_replace_split): Eliminate empty elements
	from value array. This will delete features whose XML tags are
	empty, but existent.

	* network.pl.in (xst_network_pump_get_nodns): Only omit
	updatedns tag if pump doesn't support it, or information will
	be lost.

	* parse.pl.in (xst_parse_interfaces_option_kw_not): Minor bug:
	undef ne 0.

	* network.pl.in (xst_network_interface_ensure_broadcast_and_network):
	Oops: forgot to receive the arguments.
	(xst_network_interface_changed): more intelligent network interface
	info comparison.
	(xst_network_rh62_interface_activate): Use this function here, getting
	rid of weird criterion.
	(xst_network_suse70_interface_activate): same.

2001-07-24  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_interface_ensure_broadcast_and_network):
	if the interface has address and netmask, calculate the broadcast
	and subnet.
	(xst_network_interfaces_get): call this function per iface.

2001-07-24  Hans Petter Jansson  <hpj@ximian.com>

	* time-conf.in (time_sync_hw_from_sys): Implement.