@@ -49,7 +49,7 @@ $DEBUG = 1; # 1 == command; no debug. 2 == no commands, just report. 3 == report
 # --- Tool information --- #
 
 $name = "memory";
-$version = "0.1.0";
+$version = "___version___";
 @platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0",
               "redhat-7.1", "mandrake-7.2", "debian-2.2", "debian-woody",
 	      "suse-7.0", "turbolinux-7.0");
