@@ -60,7 +60,7 @@ $TEST_NIS = 0;
 # --- Tool information --- #
 
 $name = "users";
-$version = "0.1.0";
+$version = "___version___";
 @platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0",
               "redhat-7.1", "mandrake-7.2", "debian-2.2", "debian-woody", "suse-7.0", "turbolinux-7.0");
 
